SET(atc_lib_src
	PointATC3DG.cpp	
)
ADD_LIBRARY(atclib SHARED ${atc_lib_src})

TARGET_LINK_LIBRARIES(atclib ${LIBUSB_LIBRARY})

SET_TARGET_PROPERTIES( atclib
	PROPERTIES
	VERSION 0.0.1
	SOVERSION 0.0.1)

INSTALL(TARGETS
	atclib
DESTINATION
	lib
PERMISSIONS
	OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
)
